# pico-emu2413

./: CMakeLists.txt  LICENSE  emu2413.cpp  emu2413.h  emu2413_picoI2sAudioDriver.cpp  emu2413_picoI2sAudioDriver.h  emu2413_tables.h  pico-emu2413.cpp  pico_extras_import.cmake  readme.md
audio_i2s/: audio_i2s.c  audio_i2s.h  audio_i2s.pio  picoI2sAudio.cpp  picoI2sAudio.h
miditones/: midiFreqTable.cpp  midiFreqTable.h  miditones.cpp  miditones.h  miditonesFile.cpp  miditonesFile.h
